compose/prod/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: example-service
  labels:
    app: example-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: example-service
  template:
    metadata:
      labels:
        app: example-service
    spec:
      containers:
        - name: example-service
          imagePullPolicy: Always
          image: IMAGE_NAME_PLACEHOLDER:IMAGE_TAG_PLACEHOLDER
          livenessProbe:
            httpGet:
              path: /
              port: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
          ports:
            - containerPort: 3000
